--- a/nlw_05/dev_quiz/pubspec.yaml
+++ b/nlw_05/dev_quiz/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
+  share_plus: ^2.1.2
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +20,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-    - assets/database/
+    - "assets/database/"
+
 
   uses-material-design: true
