--- a/pay_flow/pubspec.yaml
+++ b/pay_flow/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   firebase_core: ^1.3.0
   google_sign_in: ^5.0.4
   shared_preferences: ^2.0.6
+  camera: ^0.8.1+5
+  image_picker: ^0.8.2
+  google_ml_kit: ^0.6.0
 
 
 dev_dependencies:
