--- a/pay_flow/pubspec.yaml
+++ b/pay_flow/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   camera: ^0.8.1+5
   image_picker: ^0.8.2
   google_ml_kit: ^0.6.0
+  font_awesome_flutter: ^9.1.0
 
 
 dev_dependencies:
